# Web-system-ANPR

./: .dockerignore  .env.example  Dockerfile  ECR_SETUP.md  README.md  docker-compose.yml  ec2-setup.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-only.yml  deploy.yml
app/ai/: ocr_worker.py  tracker.py  yolo.py
app/api/: dependencies.py
app/api/routes/: auth.py  detections.py  plates.py  ws_detection.py
app/core/: config.py  database.py  security.py
app/models/: detection.py  plate.py  user.py
app/schemas/: detection.py  plate.py  user.py
app/services/: detection_service.py  plate_services.py  user_services.py
app/static/js/: auth.js  bootstrap.bundle.js
app/templates/: base.html  dashboard.html  history.html  login.html  plates.html  register.html  reports.html
app/utils/: __init__.py  format_plate.py
